--- a/rtblog/templates/rtblog/post_list.html
+++ b/rtblog/templates/rtblog/post_list.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 
 <html>
@@ -42,7 +43,7 @@
           </div>
 
         </div>
-      </div> 
+      </div>
     </div>
 
     <div class="bottom-part">
