--- a/rtblog/templates/rtblog/post_list.html
+++ b/rtblog/templates/rtblog/post_list.html
@@ -5,7 +5,7 @@
 
 <head>
  <title>Web Tech Project Resit</title>
- <link rel="stylesheet" type="text/css" href="webtechstylesheet.css">
+ <link rel="stylesheet" href="{% static 'webtechstylesheet.css' %}">
 </head>
 
 <body>
