--- a/rtblog/templates/rtblog/post_list.html
+++ b/rtblog/templates/rtblog/post_list.html
@@ -1,11 +1,11 @@
-
+{% load staticfiles %}
 <!DOCTYPE html>
 
 <html>
-{% load staticfiles %} 
+
 <head>
  <title>Web Tech Project Resit</title>
- <link rel="stylesheet" href="{% static 'css/webtechstylesheet.css' %}">
+ <link rel="stylesheet" href="{% static 'css/rtblog.css' %}">
 </head>
 
 <body>
