--- a/rtblog/templates/rtblog/post_list.html
+++ b/rtblog/templates/rtblog/post_list.html
@@ -16,6 +16,8 @@
       <h1> Random Thoughts Blog </h1>
       <h2> Share your random thoughts with the world! </h2>
 
+      <div class='testfigure'></div>
+
       <div class="inputs">
         <h3>
           <textarea class="userarea" placeholder="Enter your name"></textarea>
