--- a/rtblog/static/css/rtblog.css
+++ b/rtblog/static/css/rtblog.css
@@ -2,6 +2,14 @@
 
 /*************TOP AREA*************/
 
+.testfigure {
+  width: 50px;
+  height: 50px;
+  background-color: red;
+  margin: 10px;
+
+}
+
 .background {
   vertical-align: top;
   background-color: lightblue;
