--- a/rtblog/templates/rtblog/post_list.html
+++ b/rtblog/templates/rtblog/post_list.html
@@ -10,13 +10,13 @@
 
 <body>
 
+<div class='testfigure'>help</div>
+
  <div class="background">
 
    <div class="top-part">
       <h1> Random Thoughts Blog </h1>
       <h2> Share your random thoughts with the world! </h2>
-
-      <div class='testfigure'></div>
 
       <div class="inputs">
         <h3>
