--- a/rtblog/templates/rtblog/post_list.html
+++ b/rtblog/templates/rtblog/post_list.html
@@ -1,11 +1,19 @@
-{% load staticfiles %}
 <!DOCTYPE html>
 
+{% load staticfiles %}
 <html>
 
 <head>
  <title>Web Tech Project Resit</title>
+ <!--<link rel="stylesheet" href="{% static 'css/rtblog.css' %}"> -->
+
+<!--bootstrap test-->
+ <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+ <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+ <!--test css below-->
  <link rel="stylesheet" href="{% static 'css/rtblog.css' %}">
+
 </head>
 
 <body>
