--- a/rtblog/templates/rtblog/post_list.html
+++ b/rtblog/templates/rtblog/post_list.html
@@ -7,10 +7,10 @@
  <title>Web Tech Project Resit</title>
  <!--<link rel="stylesheet" href="{% static 'css/rtblog.css' %}"> -->
 
-<!--bootstrap test-->
+<!--bootstrap test
  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-
+ -->
  <!--test css below-->
  <link rel="stylesheet" href="{% static 'css/rtblog.css' %}">
 
