--- a/rtblog/templates/rtblog/post_list.html
+++ b/rtblog/templates/rtblog/post_list.html
@@ -5,13 +5,9 @@
 
 <head>
  <title>Web Tech Project Resit</title>
- <!--<link rel="stylesheet" href="{% static 'css/rtblog.css' %}"> -->
 
-<!--bootstrap test
  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
- -->
- <!--test css below-->
  <link rel="stylesheet" href="{% static 'css/rtblog.css' %}">
 
 </head>
@@ -23,7 +19,7 @@
  <div class="background">
 
    <div class="top-part">
-      <h1> Random Thoughts Blog </h1>
+      <h1><a href="/"> Random Thoughts Blog </a> </h1>
       <h2> Share your random thoughts with the world! </h2>
 
       <div class="inputs">
