--- a/rtblog/static/css/rtblog.css
+++ b/rtblog/static/css/rtblog.css
@@ -1,12 +1,7 @@
 /*test css file*/
-
-.testfigure {
-  width: 50px;
-  height: 50px;
-  background-color: red;
-  margin: 10px;
-}
+/*bootstrap required!*/
 
 h1 a {
     color: #FCA205;
+    font-family: 'Lobster';
 }
