--- a/rtblog/templates/rtblog/post_edit.html
+++ b/rtblog/templates/rtblog/post_edit.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base.html' %}
+{% extends 'rtblog/base.html' %}
 
 {% block content %}
     <h1>New post</h1>
@@ -6,4 +6,4 @@
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
-{% endblock %} 
+{% endblock %}
