--- a/rtblog/templates/rtblog/base.html
+++ b/rtblog/templates/rtblog/base.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
- <title> Web Tech </title>
+ <!--<title> Web Tech </title> -->
 
  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
