--- a/rtblog/templates/rtblog/base.html
+++ b/rtblog/templates/rtblog/base.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
- 
+
 
  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
@@ -15,6 +15,11 @@
 <body>
 
     <div class="page-header">
+        <a href="{% url 'post_new' %}" class="top-menu">
+          <span class="glyphicon glyphicon-plus">
+          </span>
+        </a>
+
         <h1><a href="/">Random Thoughts Blog</a></h1>
         <h2> Share your random thoughts with the world! </h2>
     </div>
