--- a/rtblog/templates/rtblog/post_detail.html
+++ b/rtblog/templates/rtblog/post_detail.html
@@ -9,5 +9,7 @@
         {% endif %}
         <h1>{{ post.title }}</h1>
         <p>{{ post.text|linebreaksbr }}</p>
+
+        <a href="florianmd.pythonanywhere.com">BACK</a>
     </div>
 {% endblock %}
