--- a/rtblog/templates/rtblog/post_detail.html
+++ b/rtblog/templates/rtblog/post_detail.html
@@ -11,5 +11,7 @@
         <p>{{ post.text|linebreaksbr }}</p>
 
         <a href="florianmd.pythonanywhere.com">BACK</a>
+        <a href="{% url 'rtblog:base' %}"> click here to go back </a>
+        <!--<a href="{% url 'myapp:mypage' %}">Click here</a>-->
     </div>
 {% endblock %}
