--- a/rtblog/templates/rtblog/post_detail.html
+++ b/rtblog/templates/rtblog/post_detail.html
@@ -10,6 +10,6 @@
         <h1>{{ post.title }}</h1>
         <p>{{ post.text|linebreaksbr }}</p>
 
-        <a href="florianmd.pythonanywhere.com">BACK</a>
+        <a href="{% url 'post_list' %}">BACK</a>
     </div>
 {% endblock %}
