--- a/rtblog/templates/rtblog/base.html
+++ b/rtblog/templates/rtblog/base.html
@@ -12,7 +12,13 @@
 
     <body>
         <div class="page-header">
-          <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+
+          {% if user.is_authenticated %}
+            <a href="{% url 'post_new' %}" class="top-menu">
+              <span class="glyphicon glyphicon-plus"></span>
+            </a>
+          {% endif %}
+
           <h1><a href="/">Random Thoughts Blog</a></h1>
           <h2> Share your random thoughts with the world! </h2>
         </div>
