--- a/rtblog/templates/rtblog/base.html
+++ b/rtblog/templates/rtblog/base.html
@@ -11,31 +11,32 @@
     </head>
 
     <body>
-        <div class="page-header">
 
-          {% if user.is_authenticated %}
-            <a href="{% url 'post_new' %}" class="top-menu">
-              <span class="glyphicon glyphicon-plus"></span>
-            </a>
+      <div class="page-header">
+        {% if user.is_authenticated %}
+          <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+          <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
 
-            <a href="{% url 'post_draft_list' %}" class="top-menu">
-              <span class="glyphicon glyphicon-edit"></span>
-            </a>
-          {% endif %}
+          <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+        {% else %}
+          <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+        {% endif %}
+        
+          <h1><a href="/">WEB TECH BLOG</a></h1>
+      </div>
 
-          <h1><a href="/">Random Thoughts Blog</a></h1>
-          <h2> Share your random thoughts with the world! </h2>
-        </div>
+      <div class="content container">
+          <div class="row">
 
-          <div class="content container">
-              <div class="row">
-                  <div class="col-md-8">
-                      {% block content %}
-                      {% endblock %}
-                  </div>
+              <div class="col-md-8">
+              {% block content %}
+              {% endblock %}
               </div>
+
           </div>
 
-      </body>
+      </div>
+
+    </body>
 
   </html>
