--- a/rtblog/templates/rtblog/post_draft_list.html
+++ b/rtblog/templates/rtblog/post_draft_list.html
@@ -1,6 +1,9 @@
 {% extends 'rtblog/base.html' %}
 
 {% block content %}
+
+  <h2>The following posts are drafts:</h2><br>
+  
     {% for post in posts %}
         <div class="post">
             <p class="date">created: {{ post.created_date|date:'d-m-Y' }}</p>
