--- a/rtblog/templates/rtblog/post_detail.html
+++ b/rtblog/templates/rtblog/post_detail.html
@@ -11,7 +11,7 @@
         <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
       {% endif %}
 
-        {% if user.is_authenticated %}
+        {% if user.is_authenticated and user.is_staff %}
           <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">
             <span class="glyphicon glyphicon-pencil"></span>
           </a>
@@ -36,7 +36,7 @@
       <div class="comment">
         <div class="date">
             {{ comment.created_date }}
-            {% if not comment.approved_comment %}
+            {% if not comment.approved_comment and user.is_staff %}
                 <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
                 <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>
             {% endif %}
