--- a/rtblog/templates/rtblog/post_detail.html
+++ b/rtblog/templates/rtblog/post_detail.html
@@ -10,7 +10,7 @@
       {% else %}
         {% if user.is_staff %}
         <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
-        {endif}
+        {% endif %}
       {% endif %}
 
         {% if user.is_authenticated and user.is_staff %}
