--- a/rtblog/templates/rtblog/post_edit.html
+++ b/rtblog/templates/rtblog/post_edit.html
@@ -6,4 +6,6 @@
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
+    <br>
+    <h6>Note: only staff members can approve posts after which they will show up!</h6>
 {% endblock %}
