added notes for user

--- a/rtblog/templates/rtblog/add_comment_to_post.html
+++ b/rtblog/templates/rtblog/add_comment_to_post.html
@@ -6,4 +6,6 @@
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Send</button>
     </form>
+    <br>
+    <h6>Note: comments may be deleted by admins, but will appear before approval</h6>
 {% endblock %}
