--- a/rtblog/templates/rtblog/post_edit.html
+++ b/rtblog/templates/rtblog/post_edit.html
@@ -7,5 +7,5 @@
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
     <br>
-    <h6>Note: only staff members can approve posts after which they will show up!</h6>
+    <h6>Note: Post will appear after admin approval, who may also edit its contents</h6>
 {% endblock %}
