--- a/rtblog/static/css/rtblog.css
+++ b/rtblog/static/css/rtblog.css
@@ -2,7 +2,7 @@
 /*bootstrap required!*/
 
 .page-header {
-    background-color: #ff9400;
+    background-color: #0d65d8;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
