--- a/rtblog/static/css/rtblog.css
+++ b/rtblog/static/css/rtblog.css
@@ -8,7 +8,7 @@
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
+    color: ##f2efef;
     font-size: 36pt;
     text-decoration: none;
 }
@@ -18,11 +18,11 @@
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family: sans-serif, cursive;
 }
 
 .date {
-    color: #828282;
+    color: #606060;
 }
 
 .save {
