--- a/rtblog/static/css/rtblog.css
+++ b/rtblog/static/css/rtblog.css
@@ -44,8 +44,12 @@ h1, h2, h3, h4 {
     margin-bottom: 70px;
 }
 
-.post h1 a, .post h1 a:visited {
-    color: #ffffff;
+.post h1 a {
+    color: #000000;
+}
+
+.post h1 a:visited {
+    color: #545252
 }
 
 .comment {
