--- a/rtblog/templates/rtblog/base.html
+++ b/rtblog/templates/rtblog/base.html
@@ -14,9 +14,9 @@
 
       <div class="page-header">
         {% if user.is_authenticated %}
-          <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+          <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
           {% if user.is_staff %}
-          <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+          <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
           {% endif %}
           <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
         {% else %}
