--- a/rtblog/templates/rtblog/base.html
+++ b/rtblog/templates/rtblog/base.html
@@ -23,7 +23,7 @@
           <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
         {% endif %}
 
-          <h1><a href="/">WEB TECH BLOG</a></h1>
+          <h1><a href="/">AYTHING GOES BLOG</a></h1>
       </div>
 
       <div class="content container">
